# ErisPulse-QvQChat

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  INSTALL.md  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
QvQChat/: Core.py  __init__.py  config.py  state.py  utils.py
QvQChat/agent/: __init__.py  knowledge.py  mcp_client.py  multi.py  tools.py
QvQChat/ai/: __init__.py  behavior.py  client.py  engine.py  model_pool.py
QvQChat/chat/: __init__.py  memory.py  session.py  sticker.py
QvQChat/dashboard/: __init__.py  html.py  icons.py  manager.py  scripts.py  styles.py
