[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ErisPulse-QvQChat"
version = "2.0.0"
description = "ErisPulse QvQChat 智能对话模块 - 模型池+行为绑定+多智能体+知识库+MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [ { name = "wsu2059q", email = "wsu2059@qq.com" } ]
dependencies = [
    "ErisPulse>=2.0.0",
    "openai>=1.0.0",
]

[project.urls]
"homepage" = "https://github.com/wsu2059q/ErisPulse-QvQChat"
"Issues" = "https://github.com/wsu2059q/ErisPulse-QvQChat/issues"

[project.entry-points."erispulse.module"]
"QvQChat" = "QvQChat:Main"

[tool.setuptools.packages.find]
include = ["QvQChat*"]
